RESOLVED FIXED101103
memory-instrumentation-cached-images.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=101103
Summary memory-instrumentation-cached-images.html is crashing
Alice Boxhall
Reported 2012-11-02 14:34:35 PDT
It looks like one of these changes http://trac.webkit.org/log/?verbose=on&rev=133331&stop_rev=133330, most likely http://trac.webkit.org/changeset/133331, has caused inspector/profiler/memory-instrumentation-cached-images.html to start crashing.
Attachments
Patch (1.21 KB, patch)
2012-11-02 14:50 PDT, Adam Barth
no flags
Adam Barth
Comment 2 2012-11-02 14:43:15 PDT
Thanks. I'll investigate now.
Adam Barth
Comment 3 2012-11-02 14:50:41 PDT
Adam Barth
Comment 4 2012-11-02 14:51:50 PDT
The UNUSED_PARAM macro is an attempt to avoid causing https://bugs.webkit.org/show_bug.cgi?id=100973#c9
Adam Barth
Comment 5 2012-11-02 14:55:06 PDT
Adam Barth
Comment 6 2012-11-02 14:55:48 PDT
Comment on attachment 172145 [details] Patch I landed this patch without review because it just contains a line of code that was removed in a previous patch, so it's something of a partial rollout.
Note You need to log in before you can comment on or make changes to this bug.