memory-instrumentation-cached-images.html is crashing https://bugs.webkit.org/show_bug.cgi?id=101103

Unreviewed.

Restore code deleted in http://trac.webkit.org/changeset/133331.

* bindings/v8/IntrusiveDOMWrapperMap.h:


Canonical link: https://commits.webkit.org/119200@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133354 268f45cc-cd09-0410-ab3c-d52691b4dbfc